influxdb3_catalog/src/catalog/snapshots/influxdb3_catalog__catalog__pro__tests__merge_catalog_with_new_database.snap
---
source: influxdb3_catalog/src/catalog/pro.rs
expression: b_to_a_map
---
dbs:
  1: 0
  2: 3
tables:
  1: 0
columns:
  3: 0
  4: 1
  5: 2
