influxdb3_catalog/src/catalog/snapshots/influxdb3_catalog__catalog__pro__tests__merge_catalog_with_new_table-2.snap
---
source: influxdb3_catalog/src/catalog/pro.rs
expression: a_to_b_map
---
dbs:
  0: 1
tables:
  3: 2
columns:
  8: 7
  9: 6
