influxdb3_catalog/src/catalog/snapshots/influxdb3_catalog__catalog__pro__tests__merge_catalog_with_new_table.snap
---
source: influxdb3_catalog/src/catalog/pro.rs
expression: b_to_a_map
---
dbs:
  1: 0
tables:
  1: 0
  2: 3
