influxdb3_catalog/src/catalog/snapshots/influxdb3_catalog__catalog__pro__tests__merge_two_catalogs_with_same_content_different_ids-2.snap
---
source: influxdb3_catalog/src/catalog/pro.rs
expression: b_to_a_map
---
dbs:
  1: 0
tables:
  1: 0
