influxdb3_catalog/src/catalog/snapshots/influxdb3_catalog__catalog__pro__tests__merge_two_catalogs_with_same_content_different_ids-4.snap
---
source: influxdb3_catalog/src/catalog/pro.rs
expression: a_to_b_map
---
dbs:
  0: 1
tables:
  0: 1
