influxdb3_catalog/src/catalog/snapshots/influxdb3_catalog__catalog__pro__tests__merge_two_identical_catalogs-2.snap
---
source: influxdb3_catalog/src/catalog/pro.rs
expression: b_to_a_map
---
dbs:
  0: 0
tables:
  0: 0
